--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ngrx/effects": "^8.4.0",
+    "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.4.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngrx-store-localstorage": "^8.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "websocket": "^1.0.30",
