--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,18 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ],
+              "sourceMap": true,
+              "extractCss": true,
+              "aot": true,
+              "buildOptimizer": true
             }
           }
         },
@@ -69,6 +81,9 @@
           "configurations": {
             "production": {
               "browserTarget": "templates-and-directives:build:production"
+            },
+            "dev": {
+              "browserTarget": "templates-and-directives:build:dev"
             }
           }
         },
